2008-06-20  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkdialog.c (gtk_dialog_get_action_area): change return
	value from GtkHButtonBox to GtkWidget.

2008-06-20  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkhandlebox.h (struct _GtkHandleBox): deuglify formatting
	of sealed fields.

2008-06-20  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkwindow.[ch]
	* gtk/gtk.symbols: rename gtk_window_group_get_windows() to
	gtk_window_group_list_windows().

2008-06-20 12:35:20 +0200 Tim Janik

	* Fixed wrongly resolved merge conflicts.

2008-06-19 19:01:41 +0200 Carlos Garnacho

	Add gtk_window_group_get_windows().

	* gtk/gtk.symbols:
	* gtk/gtkwindow.[ch] (gtk_window_group_get_windows): New function.

2008-06-19 18:39:47 +0200 Carlos Garnacho

	Document gtk_dialog_get_action_area(), gtk_dialog_pack_start() and gtk_dialog_pack_end()

	* gtk/gtkdialog.c: Add missing documentation for new fucntions.

2008-06-19 18:38:35 +0200 Carlos Garnacho

	Document gtk_container_get_focus_child().

	* gtk/gtkcontainer.c: Add documentation for gtk_container_get_focus_child().

2008-06-19 13:50:06 +0200 Christian Dywan

	Add gtk_plug_get_socket_window

2008-06-19 13:11:52 +0200 Christian Dywan

	Remove superflous gtkselection accessors and merge _get_data

2008-06-13 15:56:51 +0200 Christian Dywan

	Implement gtk_selection_get_display, style fixes

2008-06-13 15:45:00 +0200 Christian Dywan

	Fix indentation of a comment.

2008-06-13 15:10:08 +0200 Christian Dywan

	Change docs and signature of gtk_widget_get_allocation

2008-06-13 14:22:17 +0200 Christian Dywan

	Remove unneeded GtkColorSelectionDialog accessors

2008-06-13 12:57:54 +0200 Christian Dywan

	Fix documentaion of gtk_menu_item_get_accel_path

2008-06-11 13:49:34 +0200 Christian Dywan

	Fix gtk_widget_get_allocation

2008-06-07 15:37:18 +0200 Carlos Garnacho

	Switch to "guint GSEAL (foo) : width;" when packing fields in guints.

	* gtk/gtkbox.h:
	* gtk/gtkbutton.h:
	* gtk/gtkcellrenderer.h: